<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:title="preferences"-->
        <!--android:icon="@drawable/ic_action_settings"-->
        <!--app:showAsAction="always"/>-->
    <item
        android:id="@+id/action_new_invitation"
        android:icon="@drawable/ic_play_arrow"
        android:title="choose play"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/play_computer"
                android:icon="@drawable/ic_action_cloud"
                android:title="@string/server_ai"
                />
            <item android:id="@+id/play_mmai"
                android:icon="@drawable/ic_computer"
                android:title="@string/onboard_ai"
                />
            <item android:id="@+id/play_human"
                android:icon="@drawable/ic_wc"
                android:title="@string/other_humans"
                />
            <item android:id="@+id/database"
                android:icon="@drawable/database"
                android:title="@string/database"
                />
        </menu>

        </item>
    <item
        android:id="@+id/action_show_stats"
        android:title="@string/rating_stats"
        android:icon="@drawable/ic_action_info"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_new_message"
        android:title="@string/new_message"
        android:icon="@drawable/ic_chat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/moreSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/onlineUsers"
        android:title="@string/whos_online"
        android:icon="@drawable/online_users"
        app:showAsAction="never"/>

    <!--&lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;-->
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="settings"-->
        <!--app:showAsAction="never"/>-->

</menu>