<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.submanifold.pentelive.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/username"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/username"
        android:maxLines="1"
        android:maxLength="10"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/username"
        android:hint="@string/password"
        android:maxLength="16"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
    <EditText
        android:id="@+id/repeatPassword"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:maxLength="16"
        android:layout_height="45dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/repeatPassword"
        android:hint="@string/email"
        android:maxLines="1"
        android:singleLine="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/accept_rated_play_policy"
        android:id="@+id/ratedLabel"
        android:layout_below="@id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:checked="true"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:id="@+id/ratedToggleButton"
        android:layout_below="@id/email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_below="@id/ratedLabel"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/viewPolicy"
        android:text="view rated play policy"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>
