<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fitsSystemWindows="true"
    tools:context="be.submanifold.pentelive.InvitationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/britishracinggreen"
        android:title="@string/invitations"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/game"
        android:id="@+id/gameTypeLabel"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/gameTypeSpinner"
        android:layout_toRightOf="@id/gameTypeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:layout_below="@id/toolbar">
    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/difficulty"
        android:id="@+id/difficultyLabel"
        android:layout_below="@id/gameTypeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/difficultySpinner"
        android:layout_toRightOf="@id/gameTypeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:layout_below="@id/gameTypeSpinner">
    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/play_as_black_and_white"
        android:id="@+id/ratedLabel"
        android:layout_below="@id/difficultyLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:checked="true"
        android:textOn="@string/yes"
        android:textOff="@string/no"
        android:id="@+id/ratedToggleButton"
        android:layout_below="@+id/difficultySpinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/play_as"
        android:id="@+id/playAsLabel"
        android:visibility="gone"
        android:layout_below="@id/ratedToggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:textOn="@string/black"
        android:textOff="@string/white"
        android:visibility="gone"
        android:id="@+id/playAsToggleButton"
        android:layout_below="@+id/ratedToggleButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/sendInvitationButton"
        android:text="@string/send_invitation"
        android:layout_below="@id/playAsToggleButton"/>



</RelativeLayout>
